--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextarter-chakra",
+  "name": "uxbrite-site-auditor",
   "version": "0.1.0",
   "private": true,
   "author": "sozonome",
@@ -27,7 +27,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "framer-motion": "^11.2.13",
+    "framer-motion": "^11.2.10",
     "next": "^14.2.4",
     "next-pwa": "^5.6.0",
     "react": "^18.3.1",
