--- a/package.json
+++ b/package.json
@@ -30,9 +30,13 @@
     "framer-motion": "^11.2.10",
     "next": "^14.2.4",
     "next-pwa": "^5.6.0",
+    "openai": "^4.56.0",
+    "puppeteer": "^23.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
