--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "framer-motion": "^11.2.10",
+    "jsdom": "^24.1.1",
     "next": "^14.2.4",
     "next-pwa": "^5.6.0",
+    "node-fetch": "^3.3.2",
     "openai": "^4.56.0",
     "puppeteer": "^23.1.0",
     "react": "^18.3.1",
@@ -43,6 +45,7 @@
     "@commitlint/config-conventional": "19.2.2",
     "@commitlint/cz-commitlint": "19.2.0",
     "@playwright/test": "^1.45.1",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18.3.3",
     "commitizen": "^4.3.0",
     "cross-env": "^7.0.3",
