fix(pages): update

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
     "src",
     "commitlint.config.js",
     ".next/types/**/*.ts"
-  ],
+, "server.js"  ],
   "exclude": [
     "node_modules"
   ]
