--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uxbrite-site-auditor",
   "version": "0.1.0",
   "private": true,
-  "author": "sozonome",
+  "author": "ccrichards96",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -23,22 +23,28 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.651.1",
     "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hubspot/api-client": "^11.2.0",
+    "easy-template-x": "^3.2.1",
+    "easy-template-x-angular-expressions": "^0.1.0",
+    "express": "^4.21.0",
     "framer-motion": "^11.2.10",
     "jsdom": "^24.1.1",
+    "json5": "^2.2.3",
     "next": "^14.2.4",
     "next-pwa": "^5.6.0",
     "node-fetch": "^3.3.2",
     "openai": "^4.56.0",
     "puppeteer": "^23.1.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "8.4.0-rc2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
