--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,13 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
+[[plugins]]
+  package = "netlify-plugin-chromium"
+
 [build]
   command = 'pnpm build'
   publish = ".next"
+  functions = "functions"
 
 [build.environment]
   NODE_VERSION="20"
