--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hubspot/api-client": "^11.2.0",
+    "@netlify/functions": "^2.8.1",
+    "chrome-aws-lambda": "^10.1.0",
     "easy-template-x": "^3.2.1",
     "easy-template-x-angular-expressions": "^0.1.0",
     "express": "^4.21.0",
@@ -39,7 +41,7 @@
     "next-pwa": "^5.6.0",
     "node-fetch": "^3.3.2",
     "openai": "^4.56.0",
-    "puppeteer": "^23.1.0",
+    "puppeteer-core": "^23.4.0",
     "pusher": "^5.2.0",
     "pusher-js": "8.4.0-rc2",
     "react": "^18.3.1",
@@ -51,6 +53,7 @@
     "@commitlint/config-conventional": "19.2.2",
     "@commitlint/cz-commitlint": "19.2.0",
     "@playwright/test": "^1.45.1",
+    "@sparticuz/chromium": "^127.0.0",
     "@types/node-fetch": "^2.6.11",
     "@types/react": "^18.3.3",
     "commitizen": "^4.3.0",
@@ -60,8 +63,10 @@
     "eslint-config-sznm": "^2.0.3",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.7",
+    "netlify-plugin-chromium": "^1.1.4",
     "next-sitemap": "^4.2.3",
     "prettier": "^3.3.2",
+    "puppeteer": "^23.4.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.5.3"
   },
