--- a/renovate.json
+++ b/renovate.json
@@ -9,5 +9,5 @@
   "timezone": "Asia/Jakarta",
   "schedule": ["before 1am on Monday"],
   "rangeStrategy": "bump",
-  "ignoreDeps": ["node", "pnpm"]
+  "ignoreDeps": ["node", "npm"]
 }
