--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "up-interactive": "npm up -i",
     "up-latest": "npm up-interactive -L",
     "release": "cross-env HUSKY=0 standard-version",
-    "push-release": "git push --follow-tags origin main",
+    "push-release": "git push --follow-tags origin main"
   },
   "dependencies": {
     "@aws-amplify/core": "^6.4.2",
