--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": "src",
-    "paths": {
-      "~/*": [
-        "./*"
-      ]
-    },
     "incremental": true,
     "plugins": [
       {
@@ -41,5 +35,6 @@
 , "server.js"  ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "extends": "./tsconfig.paths.json"
 }
